--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
-    implementation 'com.haibin:calendarview:3.4.7'
+    //    implementation 'com.haibin:calendarview:3.4.8'
     api 'com.blankj:utilcode:1.19.0'
-
     /*
-                  anko配置
-               */
+                          anko配置
+                       */
     api "org.jetbrains.anko:anko-commons:$anko_version"
     api "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
     api "org.jetbrains.anko:anko-support-v4-commons:$anko_version"
@@ -46,8 +45,9 @@ dependencies {
     api "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
     api "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
     api "org.jetbrains.anko:anko-constraint-layout:$anko_version"
-
     // 界面库扩展
     api "org.jetbrains.anko:anko-design:$anko_version"
     api "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+    //    implementation project(':calendarview-hhb')
+    api project(':calendarview_hhb')
 }
